--- a/src/styles.css
+++ b/src/styles.css
@@ -37,13 +37,14 @@ html {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("./assets/circuitry-background.png"); /* Adjust path as necessary */
+  background-image: url("./components/_Pictures/Backdrop.jpg"); /* Updated path */
   background-size: cover; /* Cover the entire area */
   background-repeat: no-repeat; /* Prevent image repetition */
   opacity: 0.1; /* Set transparency level (adjust as needed) */
   pointer-events: none; /* Allow clicks to go through the backdrop */
   z-index: -1; /* Position behind other content */
 }
+
 
 /* Header styles */
 header {
