--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,33 @@
 /* Global styles */
-:root {
-  --primary-color: #333;
-  --secondary-color: #d9dada;
-  --light-gray: #dad9d9;
-  --font-family-r: "Raleway", Arial, Helvetica, sans-serif;
-  --font-family-s: "Space Grotesk", sans-serif;
-}
-
 body {
-  background-color: var(--secondary-color);
+  background-color: #dad9d9;
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  font-family: var(--font-family-r);
+  font-family: "Raleway", Arial, Helvetica, sans-serif; /* Use Raleway as the default font */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: var(--primary-color);
+  color: #333;
 }
 
+/* Enable smooth scrolling */
 html {
   scroll-behavior: smooth; /* Enables smooth scrolling for anchor links */
+}
+
+/* Unique class for Raleway font with specific weights */
+.raleway-title {
+  font-family: "Raleway", sans-serif; /* Use Raleway font */
+  font-weight: 700; /* Bold weight */
+  font-optical-sizing: auto; /* Enables optical sizing if supported */
+  font-style: normal; /* Normal font style */
+}
+
+.raleway-body {
+  font-family: "Raleway", sans-serif; /* Use Raleway font */
+  font-weight: 400; /* Normal weight */
+  font-optical-sizing: auto; /* Enables optical sizing if supported */
+  font-style: normal; /* Normal font style */
 }
 
 /* Backdrop styling */
@@ -27,21 +35,23 @@ html {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw; /* Set width to 100% of the viewport width */
-  height: 100vh; /* Set height to 100% of the viewport height */
-  background-image: url("./components/_Pictures/Backdrop.jpg");
+  width: 100%;
+  height: 100%;
+  background-image: url("./assets/circuitry-background.jpg"); /* Adjust path as necessary */
   background-size: cover; /* Cover the entire area */
   background-repeat: no-repeat; /* Prevent image repetition */
-  background-position: center; /* Center the image */
-  opacity: 0.15; /* Set transparency level (adjust as needed) */
+  opacity: 0.1; /* Set transparency level (adjust as needed) */
   pointer-events: none; /* Allow clicks to go through the backdrop */
   z-index: -1; /* Position behind other content */
 }
 
 /* Main content area styles using Grid */
 .main-content {
+  padding-top: 100px; /* Padding to avoid content being hidden by the fixed header */
   display: grid;
   grid-template-columns: 1fr; /* Single column layout */
-  margin: 0 auto; /* Center the services section */
-  max-width: 80%; /* Set max width to 90% of the container */
+  gap: 20px; /* Space between components */
+  margin-bottom: 40px;
 }
+
+
