--- a/src/styles.css
+++ b/src/styles.css
@@ -37,7 +37,7 @@ html {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("./components/_Pictures/Backdrop.jpg"); /* Adjust path as necessary */
+  background-image: url("./components/_Pictures/ChatGPTBackground.png"); /* Adjust path as necessary */
   background-size: cover; /* Cover the entire area */
   background-repeat: no-repeat; /* Prevent image repetition */
   opacity: 0.1; /* Set transparency level (adjust as needed) */
